--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>SpringModuleWEB</module>
         <module>SpringModuleEAR</module>
         <module>SpringModuleMODELO</module>
+        <module>SpringModuleDAO</module>
+        <module>SpringModuleSERVICE</module>
     </modules>
 
     <name>SpringModule</name>
@@ -22,12 +24,22 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
+        <javaee-api.version>7.0</javaee-api.version>
         <spring.framework>4.3.0.RELEASE</spring.framework>
         <mysql.version>5.1.38</mysql.version>
         <lombok.version>1.16.20</lombok.version>
         <serializer.version>2.8.1</serializer.version>
         <spring.data>1.8.2.RELEASE</spring.data>
         <hibernate.manager>4.3.11.Final</hibernate.manager>
+        <!-- swagger -->
+        <swagger.version>2.7.0</swagger.version>
+
+        <commons-codec.version>1.2</commons-codec.version>
+        <itext.version>2.1.7</itext.version>
+        <olap4j.version>1.2.0</olap4j.version>
+
+        <!-- JasperReport -->
+        <jasperreports.version>6.3.0</jasperreports.version>
     </properties>
 
     <dependencyManagement>
@@ -89,6 +101,46 @@
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
                 <version>${serializer.version}</version>
+            </dependency>
+            <!-- Swagger 2 -->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${swagger.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>${swagger.version}</version>
+            </dependency>
+            <!-- JasperReport-->
+            <dependency>
+                <groupId>net.sf.jasperreports</groupId>
+                <artifactId>jasperreports</artifactId>
+                <version>${jasperreports.version}</version>
+            </dependency>
+            <!-- PDF View -->
+            <dependency>
+                <groupId>com.lowagie</groupId>
+                <artifactId>itext</artifactId>
+                <version>${itext.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.olap4j</groupId>
+                <artifactId>olap4j</artifactId>
+                <version>${olap4j.version}</version>
+            </dependency>
+            <!-- COMMONS CODEC (BASE64) -->
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commons-codec.version}</version>
+            </dependency>
+            <!-- Java EE 7 specification APIs -->
+            <dependency>
+                <groupId>xml-apis</groupId>
+                <artifactId>xml-apis</artifactId>
+                <version>1.4.01</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
